including rx java dependency for the sdk tests because real (monarchy) tranisitive depends on rx but doesn't propagate it as an API dependency - without an explicit declaration we can't mock the realm instance

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,8 @@ dependencies {
 
     // Database
     implementation 'com.github.Zhuinden:realm-monarchy:0.7.1'
+    testImplementation libs.rx.rxKotlin
+
     kapt 'dk.ilios:realmfieldnameshelper:2.0.0'
 
     // Work
