grouping with other test deps and commenting the reason for rxKotlin dependency

--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,6 @@ dependencies {
 
     // Database
     implementation 'com.github.Zhuinden:realm-monarchy:0.7.1'
-    testImplementation libs.rx.rxKotlin
 
     kapt 'dk.ilios:realmfieldnameshelper:2.0.0'
 
@@ -167,6 +166,8 @@ dependencies {
     implementation libs.jetbrains.coroutinesAndroid
     // Plant Timber tree for test
     testImplementation 'net.lachlanmckee:timber-junit-rule:1.0.1'
+    // Transitively required for mocking realm as monarchy doesn't expose Rx
+    testImplementation libs.rx.rxKotlin
 
     kaptAndroidTest libs.dagger.daggerCompiler
     androidTestImplementation libs.androidx.testCore
