androidx.lifecycle:lifecycle-common-java8 -> androidx.lifecycle:lifecycle-common https://developer.android.com/jetpack/androidx/releases/lifecycle#2.4.0

--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,9 @@ dependencies {
     implementation libs.androidx.appCompat
     implementation libs.androidx.core
 
-    implementation libs.androidx.lifecycleJava8
+    // Lifecycle
+    implementation libs.androidx.lifecycleCommon
+    implementation libs.androidx.lifecycleProcess
 
     // Network
     implementation libs.squareup.retrofit
