--- a/build.gradle
+++ b/build.gradle
@@ -140,8 +140,8 @@ dependencies {
     implementation libs.arrow.core
     implementation libs.arrow.instances
 
-    // olm lib is now hosted by jitpack: https://jitpack.io/#org.matrix.gitlab.matrix-org/olm
-    implementation 'org.matrix.gitlab.matrix-org:olm:3.2.4'
+    // olm lib is now hosted by maven at https://gitlab.matrix.org/api/v4/projects/27/packages/maven
+    implementation 'org.matrix.android:olm:3.2.7'
 
     // DI
     implementation libs.dagger.dagger
