Add LightweightSettingsStorage in sdk Enable thread awareness when threads are disabled Enhance enable/disable thread messages to app & sdk Add Shared PReferences to sdk

--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,9 @@ dependencies {
 
     kapt 'dk.ilios:realmfieldnameshelper:2.0.0'
 
+    // Shared Preferences
+    implementation libs.androidx.preferenceKtx
+
     // Work
     implementation libs.androidx.work
 
