--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,9 @@ android {
 
     kotlinOptions {
         jvmTarget = "11"
+        freeCompilerArgs += [
+                "-Xopt-in=kotlin.RequiresOptIn"
+        ]
     }
 
     sourceSets {
